
OpenVPN
Copyright (C) 2002-2003 James Yonan <jim@yonan.net>

$Id: ChangeLog,v 1.86.2.7 2003/08/05 07:42:05 jimyonan Exp $
	
Upcoming version 1.5.0

* Added TCP support via the new --proto
  option (beta1).
* Renamed udp-centric options such as
  --udp-mtu to --link-mtu (old option
  names preserved for compatibility)
  (beta1).
* Ported to Windows 2000 + XP
  using mingw and a TAP driver derived
  from the Cipe-Win32 project by Damion
  K. Wilson (beta1).
  This port is still experimental and
  will probably not work without further
  hacking on NT 4 or the 9x/me series.
* Added --show-adapters flag for
  windows version (beta1).
* Reworked the SSL/TLS packet acknowledge
  code to better handle certain corner
  cases (beta1).
* Turned off the default enabling of
  IP forwarding in the
  sample-scripts/openvpn.init script
  for Redhat.
  Forwarding can be enabled by users
  in their --up scripts or firewall
  config (beta1).
* Added --up-restart option based on
  suggestion from Sean Reifschneider
  (beta1).
* If --dev tap or --dev-type tap
  is specified, --tun-mtu
  defaults to 1500 and --tun-mtu-extra
  defaults to 64 (beta1).
* Enabled --verb 5 debugging mode that
  prints 'R' and 'W' for each packet
  read or write on the TCP/UDP socket
  (beta1).
* Renamed INSTALL.w32 to
  INSTALL-win32.txt and reformatted
  in Windows ASCII so it's easier to
  click and view (beta2).
* Added postscript and PDF versions
  of the HOWTO to the web site
  (C R Zamana) (beta2).
* Merged Michael Clarke's stability
  patch into TAP-Win32 driver (beta2)
  which appears to fix the suspend/resume
  driver bug and significantly
  improve driver stability.
* Added Christof Meerwald's
  Media Status patch to
  the TAP-Win32 driver which shows
  the TAP adapter to be disconnected
  when OpenVPN is not running (beta2).
* Moved socket connect and TCP server
  listen code to a later point in
  openvpn() function so that the TCP
  server listen state is entered after
  daemonization (beta2).