@@ -28,6 +28,7 @@ OpenVPN license:
 
 LZO license:
 ------------
+
   LZO is Copyright (C) Markus F.X.J. Oberhumer,
   and is licensed under the GPL.
 
@@ -52,6 +53,27 @@ Windows DDK Samples:
   The Windows binary distribution includes devcon.exe, a
   Microsoft DDK sample which is redistributed under the terms
   of the DDK EULA.
+
+NSIS License:
+-------------
+
+  Copyright (C) 2002-2003 Joost Verburg
+
+  This software is provided 'as-is', without any express or implied
+  warranty. In no event will the authors be held liable for any damages
+  arising from the use of this software.
+
+  Permission is granted to anyone to use this software for any purpose,
+  including commercial applications, and to alter it and redistribute
+  it freely, subject to the following restrictions:
+
+  1. The origin of this software must not be misrepresented; 
+     you must not claim that you wrote the original software.
+     If you use this software in a product, an acknowledgment in the
+     product documentation would be appreciated but is not required.
+  2. Altered versions must be plainly marked as such,
+     and must not be misrepresented as being the original software.
+  3. This notice may not be removed or altered from any distribution.
 
 OpenSSL License:
 ----------------
