@@ -522,9 +522,9 @@ You will need the following:
     http://www.nullsoft.com/free/nsis/
 
 It should be noted that Visual C++ is NOT required.
-The open-source MinGW compiler is used for the
-userspace component of OpenVPN and the DDK is used
-for the driver component.
+The open-source MinGW compiler is used to build the
+userspace component of OpenVPN, and the DDK is used
+to build the driver component.
 
 First build the usermode component of OpenVPN
 from the top-level directory of the OpenVPN
@@ -573,7 +573,9 @@ DLLs to a directory in your path.
 
 If you want to build a self-installing EXE, consult
 the NSIS install script (openvpn.nsi) in the
-install-win32 directory.
+install-win32 directory.  You will need to edit
+openvpn.nsi to reflect the setup of your
+development environment.
 
 See instructions below for installing the kernel driver.
 
