@@ -56,22 +56,26 @@
  
   !define MUI_TEXT_WELCOME_INFO_TEXT "This wizard will guide you through the installation of OpenVPN, an Open Source VPN package by James Yonan.\r\n\r\nNote that the Windows version of OpenVPN will only run on Win 2000, XP, or higher.\r\n\r\n\r\n"
 
+  !define MUI_INNERTEXT_COMPONENTS_TOP "Select the components to install/upgrade.  To avoid conflicts, all EXE and DLL files will be installed locally, not in the Windows system32 directory."
+
   !insertmacro MUI_LANGUAGE "English"
   
 ;--------------------------------
 ;Language Strings
 
-  LangString DESC_SecOpenVPNUserSpace ${LANG_ENGLISH} "Install OpenVPN user-space components, including openvpn.exe and OpenSSL DLLs."
+  LangString DESC_SecOpenVPNUserSpace ${LANG_ENGLISH} "Install OpenVPN user-space components, including openvpn.exe."
 
-  LangString DESC_SecTAP ${LANG_ENGLISH} "Install/Upgrade the TAP-Win32 virtual device driver (required for OpenVPN operation)."
+  LangString DESC_SecOpenSSLDLLs ${LANG_ENGLISH} "Install OpenSSL DLLs locally (may be omitted if DLLs are already installed globally)."
 
-  LangString DESC_SecOpenSSLUtilities ${LANG_ENGLISH} "Install the OpenSSL Utilities (used for generating public/private key pairs for use with SSL/TLS mode)."
+  LangString DESC_SecTAP ${LANG_ENGLISH} "Install/Upgrade the TAP-Win32 virtual device driver.  Will not interfere with CIPE."
 
-  LangString DESC_SecOpenVPNSource ${LANG_ENGLISH} "Install the OpenVPN source distribution zip file."
+  LangString DESC_SecOpenSSLUtilities ${LANG_ENGLISH} "Install the OpenSSL Utilities (used for generating public/private key pairs)."
+
+  LangString DESC_SecOpenVPNSource ${LANG_ENGLISH} "Install (but do not unzip) the OpenVPN source distribution zip file."
 
   LangString DESC_SecAddPath ${LANG_ENGLISH} "Add OpenVPN executable directory to the current user's PATH."
 
-  LangString DESC_SecAddShortcuts ${LANG_ENGLISH} "Add OpenVPN documentation shortcuts to the Start Menu."
+  LangString DESC_SecAddShortcuts ${LANG_ENGLISH} "Add OpenVPN shortcuts to the current user's Start Menu."
 
 ;--------------------------------
 ;Data
@@ -97,31 +101,23 @@ Section "OpenVPN User-Space Components" SecOpenVPNUserSpace
   SetOutPath "$INSTDIR\bin"
 
   File "${HOME}\openvpn.exe"
+
+SectionEnd
+
+Section "OpenSSL DLLs" SecOpenSSLDLLs
+
+  SetOverwrite on
+  SetOutPath "$INSTDIR\bin"
   File "${BIN}\libeay32.dll"
   File "${BIN}\libssl32.dll"
 
 SectionEnd
 
-Section "Add OpenVPN to PATH" SecAddPath
-
-  ; remove previously set path (if any)
-  Push "$INSTDIR\bin"
-  Call RemoveFromPath
-
-  ; append our bin directory to end of current user path
-  Push "$INSTDIR\bin"
-  Call AddToPath
-
-SectionEnd
-
-Section "Add Shortcuts to Start Menu" SecAddShortcuts
+Section "OpenSSL Utilities" SecOpenSSLUtilities
 
   SetOverwrite on
-  CreateDirectory "$SMPROGRAMS\OpenVPN"
-  CreateShortCut "$SMPROGRAMS\OpenVPN\OpenVPN Win32 README.lnk" "$INSTDIR\INSTALL-win32.txt" ""
-  WriteINIStr "$SMPROGRAMS\OpenVPN\OpenVPN Manual Page.url" "InternetShortcut" "URL" "http://openvpn.sourceforge.net/man.html"
-  WriteINIStr "$SMPROGRAMS\OpenVPN\OpenVPN Web Site.url" "InternetShortcut" "URL" "http://openvpn.sourceforge.net/"
-  CreateShortCut "$SMPROGRAMS\OpenVPN\Uninstall OpenVPN.lnk" "$INSTDIR\Uninstall.exe"
+  SetOutPath "$INSTDIR\bin"
+  File "${BIN}\openssl.exe"
 
 SectionEnd
 
@@ -150,11 +146,26 @@ Section "TAP-Win32 Virtual Ethernet Adapter" SecTAP
 
 SectionEnd
 
-Section "OpenSSL Utilities" SecOpenSSLUtilities
+Section "Add OpenVPN to PATH" SecAddPath
+
+  ; remove previously set path (if any)
+  Push "$INSTDIR\bin"
+  Call RemoveFromPath
+
+  ; append our bin directory to end of current user path
+  Push "$INSTDIR\bin"
+  Call AddToPath
+
+SectionEnd
+
+Section "Add Shortcuts to Start Menu" SecAddShortcuts
 
   SetOverwrite on
-  SetOutPath "$INSTDIR\bin"
-  File "${BIN}\openssl.exe"
+  CreateDirectory "$SMPROGRAMS\OpenVPN"
+  CreateShortCut "$SMPROGRAMS\OpenVPN\OpenVPN Win32 README.lnk" "$INSTDIR\INSTALL-win32.txt" ""
+  WriteINIStr "$SMPROGRAMS\OpenVPN\OpenVPN Manual Page.url" "InternetShortcut" "URL" "http://openvpn.sourceforge.net/man.html"
+  WriteINIStr "$SMPROGRAMS\OpenVPN\OpenVPN Web Site.url" "InternetShortcut" "URL" "http://openvpn.sourceforge.net/"
+  CreateShortCut "$SMPROGRAMS\OpenVPN\Uninstall OpenVPN.lnk" "$INSTDIR\Uninstall.exe"
 
 SectionEnd
 
@@ -165,22 +176,6 @@ Section "OpenVPN Source Code" SecOpenVPNSource
   File "${SOURCE_ZIP_SRC}"
 
 SectionEnd
-
-;Display the Finish header
-;Insert this macro after the sections if you are not using a finish page
-!insertmacro MUI_SECTIONS_FINISHHEADER
-
-;--------------------------------
-;Descriptions
-
-!insertmacro MUI_FUNCTIONS_DESCRIPTION_BEGIN
-  !insertmacro MUI_DESCRIPTION_TEXT ${SecOpenVPNUserSpace} $(DESC_SecOpenVPNUserSpace)
-  !insertmacro MUI_DESCRIPTION_TEXT ${SecTAP} $(DESC_SecTAP)
-  !insertmacro MUI_DESCRIPTION_TEXT ${SecOpenSSLUtilities} $(DESC_SecOpenSSLUtilities)
-  !insertmacro MUI_DESCRIPTION_TEXT ${SecOpenVPNSource} $(DESC_SecOpenVPNSource)
-  !insertmacro MUI_DESCRIPTION_TEXT ${SecAddPath} $(DESC_SecAddPath)
-  !insertmacro MUI_DESCRIPTION_TEXT ${SecAddShortcuts} $(DESC_SecAddShortcuts)
-!insertmacro MUI_FUNCTIONS_DESCRIPTION_END
 
 ;--------------------
 ;Post-install section
@@ -195,25 +190,42 @@ Section -post
   IntCmp $R0 ${SF_SELECTED} "" notap notap
     ; TAP install/update was selected.
     ; Should we install or update?
+    ; If devcon error occurred, $5 will
+    ; be nonzero.
+    IntOp $5 0 & 0
     nsExec::ExecToStack '"$INSTDIR\bin\devcon.exe" hwids TAP'
     Pop $R0 # return value/error/timeout
+    IntOp $5 $5 | $R0
+    DetailPrint "devcon hwids returned: $R0"
+
+    ; If devcon output string contains "TAP" we assume
+    ; that TAP device has been previously installed,
+    ; therefore we will update, not install.
     Push "TAP"
     Call StrStr
     Pop $R0
+
+    IntCmp $5 0 0 devcon_check_error devcon_check_error
     IntCmp $R0 -1 tapinstall
 
  ;tapupdate:
-    DetailPrint "TAP UPDATE"
+    DetailPrint "TAP-Win32 UPDATE"
     nsExec::ExecToLog '"$INSTDIR\bin\devcon.exe" update "$INSTDIR\driver\OemWin2k.inf" TAP'
     Pop $R0 # return value/error/timeout
-    DetailPrint "devcon returned: $R0"
-    Goto notap
+    IntOp $5 $5 | $R0
+    DetailPrint "devcon update returned: $R0"
+    Goto devcon_check_error
 
  tapinstall:
-    DetailPrint "TAP INSTALL"
+    DetailPrint "TAP-Win32 INSTALL"
     nsExec::ExecToLog '"$INSTDIR\bin\devcon.exe" install "$INSTDIR\driver\OemWin2k.inf" TAP'
     Pop $R0 # return value/error/timeout
-    DetailPrint "devcon returned: $R0"
+    IntOp $5 $5 | $R0
+    DetailPrint "devcon install returned: $R0"
+
+ devcon_check_error:
+    IntCmp $5 0 notap
+    MessageBox MB_OK "An error occurred installing the TAP-Win32 device driver."
 
  notap:
 
@@ -251,15 +263,32 @@ Section -post
 
 SectionEnd
 
+;Display the Finish header
+;Insert this macro after the sections if you are not using a finish page
+!insertmacro MUI_SECTIONS_FINISHHEADER
+
+;--------------------------------
+;Descriptions
+
+!insertmacro MUI_FUNCTIONS_DESCRIPTION_BEGIN
+  !insertmacro MUI_DESCRIPTION_TEXT ${SecOpenVPNUserSpace} $(DESC_SecOpenVPNUserSpace)
+  !insertmacro MUI_DESCRIPTION_TEXT ${SecTAP} $(DESC_SecTAP)
+  !insertmacro MUI_DESCRIPTION_TEXT ${SecOpenSSLUtilities} $(DESC_SecOpenSSLUtilities)
+  !insertmacro MUI_DESCRIPTION_TEXT ${SecOpenSSLDLLs} $(DESC_SecOpenSSLDLLs)
+  !insertmacro MUI_DESCRIPTION_TEXT ${SecOpenVPNSource} $(DESC_SecOpenVPNSource)
+  !insertmacro MUI_DESCRIPTION_TEXT ${SecAddPath} $(DESC_SecAddPath)
+  !insertmacro MUI_DESCRIPTION_TEXT ${SecAddShortcuts} $(DESC_SecAddShortcuts)
+!insertmacro MUI_FUNCTIONS_DESCRIPTION_END
+
 ;--------------------------------
 ;Uninstaller Section
 
 Section "Uninstall"
 
-  DetailPrint "TAP REMOVE"
+  DetailPrint "TAP-Win32 REMOVE"
   nsExec::ExecToLog '"$INSTDIR\bin\devcon.exe" remove TAP'
   Pop $R0 # return value/error/timeout
-  DetailPrint "devcon returned: $R0"
+  DetailPrint "devcon remove returned: $R0"
 
   Push "$INSTDIR\bin"
   Call un.RemoveFromPath
