@@ -2,7 +2,7 @@
 OpenVPN
 Copyright (C) 2002-2003 James Yonan <jim@yonan.net>
 
-$Id: ChangeLog,v 1.86.2.7 2003/08/05 07:42:05 jimyonan Exp $
+$Id: ChangeLog,v 1.86.2.8 2003/08/06 06:05:38 jimyonan Exp $
 	
 Upcoming version 1.5.0
 
@@ -83,6 +83,8 @@ Upcoming version 1.5.0
   and "deltapall" batch files to
   add and delete TAP-Win32 adapter
   instances (beta3).
+* Extra refinements and error checking
+  added to NSIS install script (beta4).
 * Protocol compatibility is maintained
   with the 1.4.x and 1.3.x series.
   If you are connecting to a 1.3.x peer,
